tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__SeeLikeaBat-AAAAAAAAAAAAAAAAAAAIQQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2113,
  "prerequisites": [
    2112
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nightvision is a great backpack ability.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "See Like a ... Bat?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2112
  ],
  "rewards": [],
  "tasks": []
}
