tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__SeeingInsideYour-AAAAAAAAAAAAAAAAAAAJhQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2437,
  "prerequisites": [
    65,
    229
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the Holo Glasses you are able to look into Chests, Barrels and Drawers like a Holographic inventory.\n\n[note]If you lost your free one, you should be capable of making another now.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Seeing Inside Your Chests",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65,
    229
  ],
  "rewards": [],
  "tasks": []
}
