tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__SeeingThingsBrig-AAAAAAAAAAAAAAAAAAADCA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 776,
  "prerequisites": [
    775,
    796,
    797
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The nano helmet is a bit special. It will provide you with night vision as long as you have energy!\n\n[note]If you got these from a lootbag, hold these in your hand after completing the \"Carbon Parts\" quest to skip this quest.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Seeing Things Brighter",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    775,
    796,
    797
  ],
  "rewards": [],
  "tasks": []
}
