tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__SometimesLifeisS-AAAAAAAAAAAAAAAAAAAIQA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2112,
  "prerequisites": [
    103
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you are MV, you can make an Adventure Backpack. This very useful backpack can do many things. It can store 2 tools for quick access, has internal tanks for containing liquids - use the Hose to access them, a built in crafting table, and storage.\n\nWhen placed on your back, it can be accessed using a quick-access key, default is B. Check your controls for details.\n\nWhen placed on the ground, it can be accessed with a right-click. While on the ground, the bedroll can be deployed and used.\n\nThey can also be upgraded to add special abilities. For a full list, visit [url]https://wiki.gtnewhorizons.com/wiki/Adventure_Backpacks[/url].\n\n[note]It uses up the same slot as the Coal Jetpack and the Copterpack, so you'll either need to choose one, or swap them around.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sometimes Life is Scary and Dark - Bring a Backpack",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    103
  ],
  "rewards": [],
  "tasks": []
}
