tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__Tier3Base-AAAAAAAAAAAAAAAAAAAArQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 173,
  "prerequisites": [
    172
  ],
  "properties": {
    "auto_claim": false,
    "desc": "More storage, more power, and a lot more slots for possible upgrades.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lTier 3 Base",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    172
  ],
  "rewards": [],
  "tasks": []
}
